--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,18 @@ python-dateutil==2.8.2
 pytz==2023.3.post1
 six==1.16.0
 tzdata==2023.3
+certifi==2023.7.22
+charset-normalizer==3.2.0
+distlib==0.3.7
+filelock==3.12.3
+idna==3.4
+numpy==1.25.2
+pandas==2.1.0
+platformdirs==3.10.0
+python-dateutil==2.8.2
+pytz==2023.3.post1
+requests==2.31.0
+six==1.16.0
+tzdata==2023.3
+urllib3==2.0.4
+virtualenv==20.24.5
